--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 
 .btns {
     display: flex;
-    gap: 30px;
+    gap: 50px;
 }
 
 .scores {
@@ -31,6 +31,11 @@ body {
     width: 200px;
     display: flex;
     flex-direction: column;
+}
+
+.state {
+    display: flex;
+    justify-content: space-between;
 }
 
 #c-score,
