--- a/style.css
+++ b/style.css
@@ -42,6 +42,10 @@ body {
     flex: 1;
 }
 
+#round {
+    flex: 1;
+}
+
 #c-score,
 #u-score {
     font-size: 200px;
@@ -53,5 +57,5 @@ button {
 }
 
 p {
-    margin: 0;
+    margin: 0px;
 }
