--- a/style.css
+++ b/style.css
@@ -52,8 +52,10 @@ body {
 }
 
 button {
-    width: 200px;
-    height: 200px;
+    padding: 0;
+    background-color: #565656;
+    width: 250px;
+    height: 250px;
 }
 
 p {
