--- a/style.css
+++ b/style.css
@@ -52,6 +52,9 @@ body {
 
 .vs {
     display: flex;
+    padding: 5px;
+    border-left: 3px solid black;
+    border-right: 3px solid black;
     align-items: center;
     font-size: 24px;
 }
@@ -77,8 +80,28 @@ button {
     background-color: #565656;
     width: 250px;
     height: 250px;
+    border: none;
+}
+
+button:hover {
+    background-color: #898989;
+}
+
+button:disabled {
+    background-color: #111111;
 }
 
 p {
     margin: 0px;
+}
+
+#play-again {
+    display: flex;
+    justify-content: center;
+}
+
+#play-again button{
+    height: 50px;
+    color: antiquewhite;
+    font-size: 24px;
 }
