--- a/style.css
+++ b/style.css
@@ -32,8 +32,14 @@ body {
     width: 200px;
     display: flex;
     flex-direction: column;
-    flex: 1;
-    
+    flex: 1; 
+}
+
+.user-CPU {
+    display: flex;
+    justify-content: center;
+    gap: 6rem;
+    margin: 20px;
 }
 
 .game {
@@ -57,11 +63,6 @@ body {
     border-right: 3px solid black;
     align-items: center;
     font-size: 24px;
-}
-
-#round {
-    flex: 1;
-    margin: 20px;
 }
 
 #c-score,
